<resources>
    <string name="app_name">Pocket Soccer</string>

    <string name="game_loading_message">Game Loading!</string>
    <string name="continue_game_button">continue game</string>
    <string name="new_game_button">new game</string>
    <string name="player_statistics_button">player statistics</string>
    <string name="settings_button">settings</string>
    <string name="reset_all_stats_button">reset all stats</string>
    <string name="back_button">back</string>
    <string name="timeout_radio">timeout</string>
    <string name="score_radio">score</string>
    <string name="end_game_radio_group">End game on:</string>
    <string name="game_speed_seek_bar">Game speed</string>
    <string name="left_field_option">Left field option</string>
    <string name="right_field_option">Right field option</string>
    <string name="selected_field_option">Selected field option</string>

    <string name="stats_score_string_template">%1$d : </string>
    <string name="reset_all_settings_button">reset all settings</string>

    <string name="left_flag1_option">Left flag option for player 1</string>
    <string name="selected_flag1_option">Selected flag for player 1</string>
    <string name="right_flag1_option">Right flag option for player 1</string>

    <string name="left_flag2_option">Left flag option for player 2</string>
    <string name="selected_flag2_option">Selected flag for player 2</string>
    <string name="right_flag2_option">Right flag option for player 2</string>
    <string name="cancel_button">Cancel</string>
    <string name="start_button">Start</string>
    <string name="player1_header_text">Player1:</string>
    <string name="player2_header_text">Player2:</string>
    <string name="cpu_checkbox">CPU</string>
    <string name="default_player1_name">player1</string>
    <string name="default_player2_name">player2</string>
    <string name="player_1_name_hint">player 1 name</string>
    <string name="player_2_name_hint">player 2 name</string>
    <string name="score_separator">:</string>
    <string name="cpu_1_name">CPU 1</string>
    <string name="cpu_2_name">CPU 2</string>
    <string name="one_number_format">%1d</string>
    <string name="time_print_format">%1d:%02d</string>
    <string name="scores_print_format">%1s - %1d : %1d - %1s</string>
</resources>
